	* Fix a crash in purple_accounts_delete that happens when this function is
	  called before the buddy list is initialized (Florian Quèze)
	* On MSN, the Games and Office media can now be set and displayed (in
	  addition to the previous Music media). The Media status text now shows
	  the album, if possible. 
	* Fix use of av_len in perl bindings to fix some off-by-one bugs (Paul
	  Aurich)

	Gadu-Gadu:
	* Fix some problems with Gadu-Gadu buddy icons (Adam Strzelecki)
	* Gadu-Gadu now checks that UID's are valid (Adam Strzelecki)
	* Gadu-Gadu now does proper charset translations where needed (Adam
	  Strzelecki)

	XMPP:
	* Fix the namespace URL we look for in PEP reply stanzas to match the URL
	  used in the 'get' requests (Paul Aurich)
	* Resources can be set to the local machine's hostname by using
	  __HOSTNAME__ as the resource string (Jonathan Sailor)
	* Resources can now be left blank, causing the server to generate a
	  resource for us where supported (Jonathan Sailor)
	* Resources now default to no value
	* Quit trying to get user info for MUC's (Paul Aurich)
	* Send "client-accepts-full-bind-result" attribute during SASL login.
	  This will fix Google Talk login failures if the user configures the
	  wrong domain for his/her account.
	* Support new <metadata/> element to indicate no XEP-0084 User Avatar
	  (Paul Aurich)
	* Fix SHA1 avatar checksum errors that occur when one of the bytes in a
	  checksum begins with 0 (Paul Aurich)
	
	Zephyr:
	* Enable auto-reply, to emulate 'zaway' (Toby Schaffer)
	* Fix a crash when an account is configured to use tzc but tzc is not
	  installed or the configured tzc command is invalid (Michael Terry)
	* Fix a 10 second delay waiting on tzc if it is not installed or the
	  configured command is invalid (Michael Terry)

	Pidgin:
	* On GTK+ 2.14 and higher, we're using the gtk-tooltip-delay setting
	  instead of our own (hidden) tooltip_delay pref.  If you had
	  previously changed that pref, add a line like this to